# Tetris

./: CMakeLists.txt  Makefile  README.md  out.txt  tetris
include/: game.h  virtualPlayer.h
prog_av_tp1-master/: CMakeLists.txt  Makefile  README.md  ball.cpp  ball.h  base_tp1.cpp  board.cpp  board.h  sprite.cpp  sprite.h  surface.cpp  surface.h  tetrimino.cpp  tetrimino.h  tetris  tp1.cpp  window_surface.cpp  window_surface.h
src/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  sprite.cpp  sprite.h  surface.cpp  surface.h  tetrimino.cpp  tetrimino.h  tp1.cpp  virtualPlayer.cpp  virtualPlayer.h  window_surface.cpp  window_surface.h
